<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMain"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:weightSum="7" >

    <LinearLayout
        android:id="@+id/Row1LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/buttonPeriod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/periodString"
            android:textSize="@dimen/buttonFontSize"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/buttonComma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/commaString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/questionMarkString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonExclamation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/exclamationString"
            android:textSize="@dimen/buttonFontSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Row2LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/oneString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/twoString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/threeString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/fourString"
            android:textSize="@dimen/buttonFontSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Row3LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/fiveString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="fill_vertical|center"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/sixString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/sevenString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/eightString"
            android:textSize="@dimen/buttonFontSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Row4LL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/nineString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/zeroString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/plusString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/minusString"
            android:textSize="@dimen/buttonFontSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Row5LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/equalString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonDollar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/dollarString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/percentString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonQuote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/quoteString"
            android:textSize="@dimen/buttonFontSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Row6LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/buttonSemiColon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/semiColonString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonColon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/colonString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonSlash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/slashString"
            android:textSize="@dimen/buttonFontSize" />

        <Button
            android:id="@+id/buttonBackSlash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/blackSlashString"
            android:textSize="@dimen/buttonFontSize" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/Row7LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="2"
            android:onClick="onClick"
            android:padding="@dimen/buttonPadding"
            android:text="@string/backspaceString"
            android:textSize="@dimen/buttonFontSize" />
        
         <Button
             android:id="@+id/buttonEnter"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:layout_weight="2"
             android:onClick="onClick"
             android:text="@string/enterString"
             android:textSize="@dimen/buttonFontSizeEnter" />

    </LinearLayout>
    

</LinearLayout>